manifests/nishir/nishir/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nishir
  namespace: nishir
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-ui
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-ui
                port:
                  name: http
